--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@nestjs/common": "^11.0.0",
     "@nestjs/core": "^11.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.0",
     "@repo/api": "workspace:*",
     "reflect-metadata": "^0.2.0",
